lstm is hard af

--- a/papers/nlpmodels/seq2seq/tmp.ipynb
+++ b/papers/nlpmodels/seq2seq/tmp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,15 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading data: 100%|██████████| 468k/468k [00:01<00:00, 281kB/s]\n",
-      "Generating train split: 100%|██████████| 3645/3645 [00:00<00:00, 167309.48 examples/s]\n"
+      "/Users/jonirajalaa/Documents/fun/jonigrad/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Using the latest cached version of the dataset since opus_books couldn't be found on the Hugging Face Hub\n",
+      "Found the latest cached dataset configuration 'en-fi' at /Users/jonirajalaa/.cache/huggingface/datasets/opus_books/en-fi/0.0.0/1f9f6191d0e91a3c539c2595e2fe48fc1420de9b (last modified on Mon May 27 11:01:16 2024).\n"
      ]
     }
    ],
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +103,7 @@
        "})"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1142,7 @@
        " ...]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,6 +1245,74 @@
     "        outputs = np.stack(outputs, axis=1)  # Shape should be (batch_size, seq_length, hidden_size)\n",
     "        return outputs, h[np.newaxis, :, :], c[np.newaxis, :, :]\n",
     "\n",
+    "    # def backward(self, grad_output, grad_hn, grad_cn):\n",
+    "    #     grad_output = grad_output\n",
+    "    #     grad_hn = grad_hn.squeeze(0)\n",
+    "    #     grad_cn = grad_cn.squeeze(0)\n",
+    "\n",
+    "    #     dW_ih_l0 = np.zeros_like(self._params[\"W_ih_l0\"].data)\n",
+    "    #     dB_ih_l0 = np.zeros_like(self._params[\"B_ih_l0\"].data)\n",
+    "    #     dW_hh_l0 = np.zeros_like(self._params[\"W_hh_l0\"].data)\n",
+    "    #     dB_hh_l0 = np.zeros_like(self._params[\"B_hh_l0\"].data)\n",
+    "\n",
+    "    #     dh_next = grad_hn\n",
+    "    #     dc_next = grad_cn\n",
+    "\n",
+    "    #     for t in reversed(range(len(self.cache))):\n",
+    "    #         x_t, h, c, ft, it, c_tilde, ot = self.cache[t]\n",
+    "\n",
+    "    #         # Calculate gradients for the output gate\n",
+    "    #         do = grad_output[:, t, :] + dh_next * self.cell_gate_tanh(c)\n",
+    "    #         do = do * ot * (1 - ot)\n",
+    "            \n",
+    "    #         # Calculate gradients for the cell state\n",
+    "    #         dc = (grad_output[:, t, :] * ot * (1 - np.tanh(c) ** 2)) + dc_next + (dh_next * ot * (1 - np.tanh(c) ** 2))\n",
+    "\n",
+    "    #         # Calculate gradients for the input gate\n",
+    "    #         di = dc * c_tilde\n",
+    "    #         di = di * it * (1 - it)\n",
+    "\n",
+    "    #         # Calculate gradients for the forget gate\n",
+    "    #         df = dc * c\n",
+    "    #         df = df * ft * (1 - ft)\n",
+    "\n",
+    "    #         # Calculate gradients for the candidate cell state\n",
+    "    #         dc_tilde = dc * it\n",
+    "    #         dc_tilde = dc_tilde * (1 - c_tilde ** 2)\n",
+    "\n",
+    "    #         dW_ih_l0[:self.hidden_size] += np.dot(di.T, x_t)\n",
+    "    #         dW_ih_l0[self.hidden_size:2*self.hidden_size] += np.dot(df.T, x_t)\n",
+    "    #         dW_ih_l0[2*self.hidden_size:3*self.hidden_size] += np.dot(dc_tilde.T, x_t)\n",
+    "    #         dW_ih_l0[3*self.hidden_size:] += np.dot(do.T, x_t)\n",
+    "\n",
+    "    #         dB_ih_l0[:self.hidden_size] += np.sum(di, axis=0)\n",
+    "    #         dB_ih_l0[self.hidden_size:2*self.hidden_size] += np.sum(df, axis=0)\n",
+    "    #         dB_ih_l0[2*self.hidden_size:3*self.hidden_size] += np.sum(dc_tilde, axis=0)\n",
+    "    #         dB_ih_l0[3*self.hidden_size:] += np.sum(do, axis=0)\n",
+    "\n",
+    "    #         dW_hh_l0[:self.hidden_size] += np.dot(di.T, h)\n",
+    "    #         dW_hh_l0[self.hidden_size:2*self.hidden_size] += np.dot(df.T, h)\n",
+    "    #         dW_hh_l0[2*self.hidden_size:3*self.hidden_size] += np.dot(dc_tilde.T, h)\n",
+    "    #         dW_hh_l0[3*self.hidden_size:] += np.dot(do.T, h)\n",
+    "\n",
+    "    #         dB_hh_l0[:self.hidden_size] += np.sum(di, axis=0)\n",
+    "    #         dB_hh_l0[self.hidden_size:2*self.hidden_size] += np.sum(df, axis=0)\n",
+    "    #         dB_hh_l0[2*self.hidden_size:3*self.hidden_size] += np.sum(dc_tilde, axis=0)\n",
+    "    #         dB_hh_l0[3*self.hidden_size:] += np.sum(do, axis=0)\n",
+    "\n",
+    "    #         # Propagate gradients to the previous time step\n",
+    "    #         dh_next = np.dot(di, self._params[\"W_hh_l0\"].data[:self.hidden_size].T) + \\\n",
+    "    #                   np.dot(df, self._params[\"W_hh_l0\"].data[self.hidden_size:2*self.hidden_size].T) + \\\n",
+    "    #                   np.dot(dc_tilde, self._params[\"W_hh_l0\"].data[2*self.hidden_size:3*self.hidden_size].T) + \\\n",
+    "    #                   np.dot(do, self._params[\"W_hh_l0\"].data[3*self.hidden_size:].T)\n",
+    "\n",
+    "    #         dc_next = dc * ft\n",
+    "\n",
+    "    #     self._params[\"W_ih_l0\"].grad = dW_ih_l0\n",
+    "    #     self._params[\"B_ih_l0\"].grad = dB_ih_l0\n",
+    "    #     self._params[\"W_hh_l0\"].grad = dW_hh_l0\n",
+    "    #     self._params[\"B_hh_l0\"].grad = dB_hh_l0\n",
+    "\n",
     "    def backward(self, grad_output, grad_hn, grad_cn):\n",
     "        grad_output = grad_output\n",
     "        grad_hn = grad_hn.squeeze(0)\n",
@@ -1255,28 +1325,25 @@
     "\n",
     "        dh_next = grad_hn\n",
     "        dc_next = grad_cn\n",
+    "        dL_dx = np.zeros((grad_output.shape[0], grad_output.shape[1], self.input_size))\n",
     "\n",
     "        for t in reversed(range(len(self.cache))):\n",
     "            x_t, h, c, ft, it, c_tilde, ot = self.cache[t]\n",
     "\n",
     "            # Calculate gradients for the output gate\n",
-    "            do = grad_output[:, t, :] + dh_next * self.cell_gate_tanh(c)\n",
-    "            do = do * ot * (1 - ot)\n",
+    "            do = (grad_output[:, t, :] + dh_next * self.cell_gate_tanh(c)) * ot * (1 - ot)\n",
     "            \n",
     "            # Calculate gradients for the cell state\n",
     "            dc = (grad_output[:, t, :] * ot * (1 - np.tanh(c) ** 2)) + dc_next + (dh_next * ot * (1 - np.tanh(c) ** 2))\n",
     "\n",
     "            # Calculate gradients for the input gate\n",
-    "            di = dc * c_tilde\n",
-    "            di = di * it * (1 - it)\n",
+    "            di = dc * c_tilde * it * (1 - it)\n",
     "\n",
     "            # Calculate gradients for the forget gate\n",
-    "            df = dc * c\n",
-    "            df = df * ft * (1 - ft)\n",
+    "            df = dc * c * ft * (1 - ft)\n",
     "\n",
     "            # Calculate gradients for the candidate cell state\n",
-    "            dc_tilde = dc * it\n",
-    "            dc_tilde = dc_tilde * (1 - c_tilde ** 2)\n",
+    "            dc_tilde = dc * it * (1 - c_tilde ** 2)\n",
     "\n",
     "            dW_ih_l0[:self.hidden_size] += np.dot(di.T, x_t)\n",
     "            dW_ih_l0[self.hidden_size:2*self.hidden_size] += np.dot(df.T, x_t)\n",
@@ -1298,23 +1365,32 @@
     "            dB_hh_l0[2*self.hidden_size:3*self.hidden_size] += np.sum(dc_tilde, axis=0)\n",
     "            dB_hh_l0[3*self.hidden_size:] += np.sum(do, axis=0)\n",
     "\n",
+    "            # Calculate gradient with respect to input x_t\n",
+    "            dx_t = np.dot(di, self._params[\"W_ih_l0\"].data[:self.hidden_size]) + \\\n",
+    "                np.dot(df, self._params[\"W_ih_l0\"].data[self.hidden_size:2*self.hidden_size]) + \\\n",
+    "                np.dot(dc_tilde, self._params[\"W_ih_l0\"].data[2*self.hidden_size:3*self.hidden_size]) + \\\n",
+    "                np.dot(do, self._params[\"W_ih_l0\"].data[3*self.hidden_size:])\n",
+    "            dL_dx[:, t, :] = dx_t\n",
+    "\n",
     "            # Propagate gradients to the previous time step\n",
     "            dh_next = np.dot(di, self._params[\"W_hh_l0\"].data[:self.hidden_size].T) + \\\n",
-    "                      np.dot(df, self._params[\"W_hh_l0\"].data[self.hidden_size:2*self.hidden_size].T) + \\\n",
-    "                      np.dot(dc_tilde, self._params[\"W_hh_l0\"].data[2*self.hidden_size:3*self.hidden_size].T) + \\\n",
-    "                      np.dot(do, self._params[\"W_hh_l0\"].data[3*self.hidden_size:].T)\n",
+    "                    np.dot(df, self._params[\"W_hh_l0\"].data[self.hidden_size:2*self.hidden_size].T) + \\\n",
+    "                    np.dot(dc_tilde, self._params[\"W_hh_l0\"].data[2*self.hidden_size:3*self.hidden_size].T) + \\\n",
+    "                    np.dot(do, self._params[\"W_hh_l0\"].data[3*self.hidden_size:].T)\n",
     "\n",
     "            dc_next = dc * ft\n",
     "\n",
     "        self._params[\"W_ih_l0\"].grad = dW_ih_l0\n",
     "        self._params[\"B_ih_l0\"].grad = dB_ih_l0\n",
     "        self._params[\"W_hh_l0\"].grad = dW_hh_l0\n",
-    "        self._params[\"B_hh_l0\"].grad = dB_hh_l0\n"
+    "        self._params[\"B_hh_l0\"].grad = dB_hh_l0\n",
+    "\n",
+    "        return dL_dx, dh_next[np.newaxis, :, :], dc_next[np.newaxis, :, :]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1336,10 +1412,10 @@
     "\n",
     "def copy_weights_from_pytorch_to_custom(pytorch_lstm, custom_lstm):\n",
     "    with torch.no_grad():\n",
-    "        custom_lstm._params[\"W_ih_l0\"].data = pytorch_lstm.weight_ih_l0.cpu().detach().numpy()\n",
-    "        custom_lstm._params[\"B_ih_l0\"].data = pytorch_lstm.bias_ih_l0.cpu().detach().numpy()\n",
-    "        custom_lstm._params[\"W_hh_l0\"].data = pytorch_lstm.weight_hh_l0.cpu().detach().numpy()\n",
-    "        custom_lstm._params[\"B_hh_l0\"].data = pytorch_lstm.bias_hh_l0.cpu().detach().numpy()\n",
+    "        custom_lstm._params[\"W_ih_l0\"].data = pytorch_lstm.weight_ih_l0.detach().numpy().astype(np.float32)\n",
+    "        custom_lstm._params[\"B_ih_l0\"].data = pytorch_lstm.bias_ih_l0.detach().numpy().astype(np.float32)\n",
+    "        custom_lstm._params[\"W_hh_l0\"].data = pytorch_lstm.weight_hh_l0.detach().numpy().astype(np.float32)\n",
+    "        custom_lstm._params[\"B_hh_l0\"].data = pytorch_lstm.bias_hh_l0.detach().numpy().astype(np.float32)\n",
     "\n",
     "# Sample parameters and inputs\n",
     "input_size = 10\n",
@@ -1378,16 +1454,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Forward pass output comparison: True\n",
-      "Hidden state comparison: True\n",
-      "Cell state comparison: True\n",
+      "False Backward pass gradients do not match!\n",
       "Weight gradients comparison for W_ih_l0: False\n",
       "Bias gradients comparison for B_ih_l0: False\n",
       "Weight gradients comparison for W_hh_l0: False\n",
@@ -1402,56 +1476,62 @@
     "seq_length = 5\n",
     "batch_size = 3\n",
     "\n",
-    "# Sample input tensor\n",
-    "input_tensor = torch.randn(batch_size, seq_length, input_size)\n",
-    "\n",
-    "# Initialize PyTorch LSTM\n",
-    "pytorch_lstm = nn.LSTM(input_size, hidden_size, batch_first=True)\n",
+    "x_torch = torch.randn(batch_size, seq_length, input_size)\n",
+    "x = x_torch.detach().numpy()\n",
+    "x_torch.requires_grad_(True)\n",
     "h0 = torch.randn(1, batch_size, hidden_size)  # Initial hidden state\n",
     "c0 = torch.randn(1, batch_size, hidden_size)  # Initial cell state\n",
     "\n",
+    "# Initialize PyTorch LSTM and custom LSTM\n",
+    "pytorch_lstm = nn.LSTM(input_size, hidden_size, batch_first=True)\n",
     "custom_lstm = LSTM(input_size, hidden_size)\n",
     "\n",
     "# Copy weights from PyTorch LSTM to custom LSTM\n",
+    "def copy_weights_from_pytorch_to_custom(pytorch_lstm, custom_lstm):\n",
+    "    custom_lstm._params[\"W_ih_l0\"].data = pytorch_lstm.weight_ih_l0.detach().numpy().astype(np.float32)\n",
+    "    custom_lstm._params[\"B_ih_l0\"].data = pytorch_lstm.bias_ih_l0.detach().numpy().astype(np.float32)\n",
+    "    custom_lstm._params[\"W_hh_l0\"].data = pytorch_lstm.weight_hh_l0.detach().numpy().astype(np.float32)\n",
+    "    custom_lstm._params[\"B_hh_l0\"].data = pytorch_lstm.bias_hh_l0.detach().numpy().astype(np.float32)\n",
+    "\n",
     "copy_weights_from_pytorch_to_custom(pytorch_lstm, custom_lstm)\n",
     "\n",
     "# Forward pass through PyTorch LSTM\n",
-    "pytorch_output, (pytorch_hn, pytorch_cn) = pytorch_lstm(input_tensor, (h0, c0))\n",
+    "torch_output, (pytorch_hn, pytorch_cn) = pytorch_lstm(x_torch, (h0, c0))\n",
     "\n",
     "# Forward pass through custom LSTM\n",
-    "hand_built_output, hand_built_hn, hand_built_cn = custom_lstm.forward(input_tensor.detach().numpy(), h0.detach().numpy(), c0.detach().numpy())\n",
+    "custom_output, hand_built_hn, hand_built_cn = custom_lstm.forward(x, h0.detach().numpy(), c0.detach().numpy())\n",
     "\n",
-    "# Compare forward pass outputs\n",
-    "print(\"Forward pass output comparison:\", np.allclose(pytorch_output.detach().numpy(), hand_built_output, atol=1e-6))\n",
-    "print(\"Hidden state comparison:\", np.allclose(pytorch_hn.detach().numpy(), hand_built_hn, atol=1e-6))\n",
-    "print(\"Cell state comparison:\", np.allclose(pytorch_cn.detach().numpy(), hand_built_cn, atol=1e-6))\n",
+    "# Create random gradient for backward pass\n",
+    "grad_output = np.random.randn(*custom_output.shape).astype(np.float32)\n",
+    "grad_output_torch = torch.from_numpy(grad_output).float()\n",
     "\n",
-    "# Define some loss function\n",
-    "loss_fn = nn.MSELoss()\n",
-    "target = torch.randn_like(pytorch_output)\n",
+    "# Initialize zero gradients for hn and cn\n",
+    "grad_hn = torch.zeros_like(pytorch_hn)\n",
+    "grad_cn = torch.zeros_like(pytorch_cn)\n",
     "\n",
-    "# Compute loss and gradients for PyTorch LSTM\n",
-    "pytorch_loss = loss_fn(pytorch_output, target)\n",
-    "pytorch_loss.backward()\n",
+    "# Backward pass through custom layer\n",
+    "custom_lstm.zero_grad()\n",
+    "custom_grad_input, dh_next, dc_next = custom_lstm.backward(grad_output, grad_hn.detach().numpy(), grad_cn.detach().numpy())\n",
     "\n",
-    "# Compute loss and gradients for custom LSTM\n",
-    "hand_built_output_tensor = torch.tensor(hand_built_output, requires_grad=True)\n",
-    "target_tensor = torch.tensor(target.detach().numpy())\n",
-    "hand_built_loss = loss_fn(hand_built_output_tensor, target_tensor)\n",
-    "hand_built_loss.backward()\n",
+    "# Backward pass through PyTorch layer\n",
+    "pytorch_lstm.zero_grad()\n",
+    "torch_output.backward(grad_output_torch)\n",
+    "torch_grad_input = x_torch.grad.numpy()\n",
     "\n",
-    "# Backward pass through custom LSTM\n",
-    "grad_output = hand_built_output_tensor.grad.detach().numpy()\n",
-    "grad_hn = torch.zeros_like(h0)  # Zero gradients for simplicity\n",
-    "grad_cn = torch.zeros_like(c0)  # Zero gradients for simplicity\n",
-    "custom_lstm.backward(grad_output, grad_hn.detach().numpy(), grad_cn.detach().numpy())\n",
-    "\n",
-    "# Compare gradients\n",
+    "# Compare the gradients\n",
+    "print(np.allclose(custom_grad_input, torch_grad_input, atol=1e-6), \"Backward pass gradients do not match!\")\n",
     "print(\"Weight gradients comparison for W_ih_l0:\", np.allclose(pytorch_lstm.weight_ih_l0.grad.numpy(), custom_lstm._params[\"W_ih_l0\"].grad, atol=1e-6))\n",
     "print(\"Bias gradients comparison for B_ih_l0:\", np.allclose(pytorch_lstm.bias_ih_l0.grad.numpy(), custom_lstm._params[\"B_ih_l0\"].grad, atol=1e-6))\n",
     "print(\"Weight gradients comparison for W_hh_l0:\", np.allclose(pytorch_lstm.weight_hh_l0.grad.numpy(), custom_lstm._params[\"W_hh_l0\"].grad, atol=1e-6))\n",
-    "print(\"Bias gradients comparison for B_hh_l0:\", np.allclose(pytorch_lstm.bias_hh_l0.grad.numpy(), custom_lstm._params[\"B_hh_l0\"].grad, atol=1e-6))"
+    "print(\"Bias gradients comparison for B_hh_l0:\", np.allclose(pytorch_lstm.bias_hh_l0.grad.numpy(), custom_lstm._params[\"B_hh_l0\"].grad, atol=1e-6))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
